# asr_eval

./: .gitignore  pyproject.toml
data/examples/: example.txt
utils/: create_test_multiprocessing.py  create_test_wav_files.py
utils/cloud/: crt_api.py  google_api.py  wit_ai.py  yandex_short.py
utils/cloud/cloud_client/: __init__.py  cloud_api_client.py  run.py
utils/cloud/cloud_client/api/: __init__.py  packages_api.py  recognize_api.py  session_api.py
utils/cloud/cloud_client/models/: __init__.py  asr_advanced_result_dto.py  recognition_request_dto.py  sessionless_recognition_request_dto.py
utils/cloud/tinkoff/: audio.py  common.py  recognize.py  requirements.txt  tinkoff_api.py
utils/cloud/tinkoff/cloud/stt/v1/: stt_pb2_grpc.py
utils/conf/: create_test_files.py  crt.py
